--- a/src/main/resources/AjouterVol.fxml
+++ b/src/main/resources/AjouterVol.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="925.0" prefWidth="1150.0" style="-fx-background-color: #E0F7FA;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterVol" >
+<AnchorPane prefHeight="1000.0" prefWidth="1150.0" style="-fx-background-color: #E0F7FA;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterVolsController" >
    <children>
-      <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ffebfb" height="454.0" layoutX="103.0" layoutY="156.0" stroke="WHITE" strokeType="INSIDE" width="961.0" />
+      <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ffebfb" height="554.0" layoutX="103.0" layoutY="156.0" stroke="WHITE" strokeType="INSIDE" width="961.0" />
       <TextField fx:id="AddFlightnumber" layoutX="138.0" layoutY="219.0" prefHeight="26.0" prefWidth="226.0" promptText="Flight number" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
       <TextField fx:id="AddDeparture" layoutX="391.0" layoutY="219.0" prefHeight="26.0" prefWidth="226.0" promptText="Departure" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
       <TextField fx:id="AddDestination" layoutX="656.0" layoutY="219.0" prefHeight="26.0" prefWidth="226.0" promptText="Destination" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
@@ -29,7 +29,9 @@
       <TextField fx:id="AddPrice" layoutX="129.0" layoutY="522.0" prefHeight="26.0" prefWidth="226.0" promptText="Price" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
       <Text layoutX="130.0" layoutY="502.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price" wrappingWidth="213.15423583984375" />
       <DatePicker fx:id="AddFlightDate" layoutX="656.0" layoutY="338.0" prefHeight="26.0" prefWidth="226.0" promptText="Flight Date" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
-      <Button layoutX="763.0" layoutY="554.0" mnemonicParsing="false" onAction="#AddFlight" prefHeight="35.0" prefWidth="204.0" style="-fx-background-color: FF7757; -fx-background-radius: 5;" text="Add Flight" />
+      <Button layoutX="763.0" layoutY="634.0" mnemonicParsing="false" onAction="#AddFlight" prefHeight="35.0" prefWidth="204.0" style="-fx-background-color: FF7757; -fx-background-radius: 5;" text="Add Flight" />
       <TextField fx:id="AddAvailableSeats" layoutX="377.0" layoutY="442.0" prefHeight="26.0" prefWidth="226.0" promptText="Available Seats" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
+      <TextField fx:id="AddImageUrl" layoutX="398.0" layoutY="522.0" prefHeight="26.0" prefWidth="484.0" promptText="Image URL" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
+      <Text layoutX="398.0" layoutY="502.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Image URL (lien vers l'image)" wrappingWidth="213.15423583984375" />
    </children>
 </AnchorPane>
