--- a/src/main/resources/SupprimerVols.fxml
+++ b/src/main/resources/SupprimerVols.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SupprimerVolsController">
@@ -18,9 +17,10 @@
                 </Label>
                 <ScrollPane fitToWidth="true" layoutX="50.0" layoutY="60.0" prefHeight="700.0" prefWidth="1100.0" style="-fx-background-color: transparent; -fx-border-color: #039BE5; -fx-border-radius: 5;">
                     <content>
-                        <VBox fx:id="flightsContainer" prefWidth="1080.0" spacing="20.0" style="-fx-background-color: #ffebfb; -fx-padding: 15;">
+                        <!-- Utilisation de FlowPane pour organiser les vols horizontalement et automatiquement -->
+                        <FlowPane fx:id="flightsContainer" hgap="20.0" vgap="20.0" prefWidth="1080.0" style="-fx-background-color: #ffebfb; -fx-padding: 15;" alignment="TOP_CENTER">
                             <!-- Les vols seront ajoutés ici dynamiquement -->
-                        </VBox>
+                        </FlowPane>
                     </content>
                 </ScrollPane>
                 <Label fx:id="statusLabel" alignment="CENTER" layoutX="400.0" layoutY="768.0" prefHeight="20.0" prefWidth="400.0" textAlignment="CENTER" textFill="#039BE5">
