--- a/src/main/resources/AfficherVols.fxml
+++ b/src/main/resources/AfficherVols.fxml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherVolsController">
     <children>
-        <Text layoutX="217.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Liste des Vols" textAlignment="CENTER">
-            <font>
-                <Font name="System Bold" size="24.0" />
-            </font>
-        </Text>
-        <ScrollPane layoutX="14.0" layoutY="62.0" prefHeight="691.0" prefWidth="1170.0">
-            <content>
-                <VBox fx:id="flightsContainer" prefWidth="1150.0" spacing="10" style="-fx-padding: 10;" />
-            </content>
-        </ScrollPane>
+        <AnchorPane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #ffebfb; -fx-background-radius: 10;">
+            <children>
+                <Label layoutX="477.0" layoutY="14.0" text="Liste des Vols" textAlignment="CENTER">
+                    <font>
+                        <Font name="System Bold" size="24.0" />
+                    </font>
+                </Label>
+                <ScrollPane fitToWidth="true" layoutX="50.0" layoutY="60.0" prefHeight="700.0" prefWidth="1100.0" style="-fx-background-color: transparent; -fx-border-color: #039BE5; -fx-border-radius: 5;">
+                    <content>
+                        <!-- Utilisation de FlowPane pour organiser les vols horizontalement et automatiquement -->
+                        <FlowPane fx:id="flightsContainer" hgap="20.0" vgap="20.0" prefWidth="1080.0" style="-fx-background-color: #ffebfb; -fx-padding: 15;" alignment="TOP_CENTER">
+                            <!-- Les vols seront ajoutés ici dynamiquement -->
+                        </FlowPane>
+                    </content>
+                </ScrollPane>
+                <Label fx:id="statusLabel" alignment="CENTER" layoutX="400.0" layoutY="768.0" prefHeight="20.0" prefWidth="400.0" textAlignment="CENTER" textFill="#039BE5">
+                    <font>
+                        <Font size="14.0" />
+                    </font>
+                </Label>
+            </children>
+        </AnchorPane>
     </children>
 </AnchorPane>
