--- a/src/main/resources/AjouterVol.fxml
+++ b/src/main/resources/AjouterVol.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
@@ -31,7 +32,11 @@
       <DatePicker fx:id="AddFlightDate" layoutX="656.0" layoutY="338.0" prefHeight="26.0" prefWidth="226.0" promptText="Flight Date" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
       <Button layoutX="763.0" layoutY="634.0" mnemonicParsing="false" onAction="#AddFlight" prefHeight="35.0" prefWidth="204.0" style="-fx-background-color: FF7757; -fx-background-radius: 5;" text="Add Flight" />
       <TextField fx:id="AddAvailableSeats" layoutX="377.0" layoutY="442.0" prefHeight="26.0" prefWidth="226.0" promptText="Available Seats" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
-      <TextField fx:id="AddImageUrl" layoutX="398.0" layoutY="522.0" prefHeight="26.0" prefWidth="484.0" promptText="Image URL" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
-      <Text layoutX="398.0" layoutY="502.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Image URL (lien vers l'image)" wrappingWidth="213.15423583984375" />
+
+      <!-- Remplacer le TextField par un Button et un Label pour l'image -->
+      <Button fx:id="btnChooseImage" layoutX="398.0" layoutY="522.0" onAction="#chooseImage" prefHeight="26.0" prefWidth="200.0" style="-fx-background-color: #39909D; -fx-text-fill: white; -fx-background-radius: 5;" text="Choisir une image" />
+      <Label fx:id="lblImagePath" layoutX="610.0" layoutY="522.0" prefHeight="26.0" prefWidth="272.0" style="-fx-border-color: #39909D; -fx-border-radius: 5; -fx-padding: 5;" text="Aucune image sélectionnée" />
+
+      <Text layoutX="398.0" layoutY="502.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Image" wrappingWidth="213.15423583984375" />
    </children>
 </AnchorPane>
