--- a/src/main/resources/ChercherVol.fxml
+++ b/src/main/resources/ChercherVol.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="788.0" prefWidth="1227.0" style="-fx-background-color: #E0F7FA;;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ChercherVolController">
+<AnchorPane prefHeight="788.0" prefWidth="1227.0" style="-fx-background-color: #ab71ff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ChercherVolController">
     <children>
-        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#136ec9" height="409.0" layoutX="207.0" layoutY="88.0" opacity="0.2" stroke="#f71818" strokeType="INSIDE" width="454.0" />
+        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#c4e6ea" height="409.0" layoutX="207.0" layoutY="88.0" stroke="WHITE" strokeType="INSIDE" width="454.0" />
         <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ffebfb" height="530.0" layoutX="690.0" layoutY="88.0" stroke="#b4aaaa" strokeType="INSIDE" width="426.0" />
         <TextField fx:id="departurechercher" layoutX="727.0" layoutY="181.0" prefHeight="26.0" prefWidth="226.0" promptText="Departure" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
         <TextField fx:id="destinationchercher" layoutX="727.0" layoutY="250.0" prefHeight="26.0" prefWidth="226.0" promptText="Destination" style="-fx-border-color: #39909D; -fx-border-radius: 5;" />
@@ -27,7 +27,7 @@
         <Text layoutX="727.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Destination" />
         <Text layoutX="727.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Flight-Date" />
         <Text layoutX="726.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number of adult passengers" />
-        <Text layoutX="727.0" layoutY="466.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number of child passengers" />
+        <Text layoutX="727.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number of child passengers" />
         <Text layoutX="370.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" />
         <Text layoutX="370.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" />
         <Text fill="#dc2a2a" layoutX="226.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ready to explore tho world ?">
@@ -40,15 +40,15 @@
                 <Font name="Century Schoolbook" size="14.0" />
             </font>
         </Text>
-        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ff7757" height="134.0" layoutX="207.0" layoutY="521.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" width="136.0" />
+        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ff7757" height="134.0" layoutX="207.0" layoutY="521.0" opacity="0.86" stroke="BLACK" strokeType="INSIDE" width="136.0" />
         <ImageView fitHeight="70.0" fitWidth="123.0" layoutX="238.0" layoutY="524.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@ImageVol/agence-de-voyage (1) 1.png" />
             </image>
         </ImageView>
         <Text layoutX="238.0" layoutY="611.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Personalized Expertise and Advice" textAlignment="CENTER" wrappingWidth="70.40000000000009" />
-        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ff7757" height="134.0" layoutX="370.0" layoutY="522.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" width="136.0" />
-        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ff7757" height="134.0" layoutX="529.0" layoutY="522.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" width="136.0" />
+        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ff7757" height="134.0" layoutX="370.0" layoutY="522.0" opacity="0.86" stroke="BLACK" strokeType="INSIDE" width="136.0" />
+        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ff7757" height="134.0" layoutX="529.0" layoutY="522.0" opacity="0.86" stroke="BLACK" strokeType="INSIDE" width="136.0" />
         <ImageView fitHeight="70.0" fitWidth="54.0" layoutX="411.0" layoutY="532.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@ImageVol/lhorloge 1.png" />
