--- a/src/main/resources/MenuPrincipale.fxml
+++ b/src/main/resources/MenuPrincipale.fxml
@@ -4,11 +4,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #E0F7FA;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuPrincipalController">
+<AnchorPane prefHeight="831.0" prefWidth="1381.0" style="-fx-background-color: #ab71ff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuPrincipalController">
     <children>
-        <VBox layoutX="14.0" layoutY="100.0" prefHeight="476.0" prefWidth="199.0" spacing="20.0" style="-fx-background-color: #B2EBF2; -fx-background-radius: 10;">
+        <VBox layoutX="14.0" layoutY="31.0" prefHeight="203.0" prefWidth="188.0" spacing="20.0" style="-fx-background-color: #B2EBF2; -fx-background-radius: 10;">
             <children>
                 <Button fx:id="btnAjouter" mnemonicParsing="false" onAction="#ouvrirAjouter" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #039BE5; -fx-text-fill: white; -fx-background-radius: 5;" text="Ajouter Vol">
                     <font>
@@ -20,23 +19,8 @@
                         <Font size="14.0" />
                     </font>
                 </Button>
-                <Button fx:id="btnModifier" mnemonicParsing="false" onAction="#ouvrirModifier" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #039BE5; -fx-text-fill: white; -fx-background-radius: 5;" text="Modifier Vol">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Button>
-            <Button fx:id="btnsupprimer" mnemonicParsing="false" onAction="#ouvrirSupprimer" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #039BE5; -fx-text-fill: white; -fx-background-radius: 5;" text="supprimer Vol">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
             </children>
         </VBox>
-        <Text fill="#145de0" layoutX="475.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gestion des Vols" textAlignment="CENTER">
-            <font>
-                <Font name="Book Antiqua" size="36.0" />
-            </font>
-        </Text>
-        <AnchorPane fx:id="contentArea" layoutX="229.0" layoutY="100.0" prefHeight="476.0" prefWidth="882.0" style="-fx-background-color: #ffebfb; -fx-background-radius: 10;" />
+        <AnchorPane fx:id="contentArea" layoutX="218.0" layoutY="14.0" prefHeight="793.0" prefWidth="1134.0" style="-fx-background-color: #ffebfb; -fx-background-radius: 10;" />
     </children>
 </AnchorPane>
